[package]
name = "egui-d3d11"
version = "0.8.0"
edition = "2021"
authors = ["sy1ntexx"]
description = "D3D11 backend for egui library."
repository = "https://github.com/sy1ntexx/egui-d3d11"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
spin = { version = "0.9", optional = true, features = ["lock_api"] }
parking_lot = { version = "0.12", optional = true }
clipboard = "0.5"
thiserror = "1.0"
once_cell = "1.13"
lock_api = "0.4"
egui = "0.20"

[features]
default = ["parking-lot"]
# Removes all message prints.
no-msgs = []
# Debug feature, enables clearing of the view.
clear = []
# Enables force compilation of shader code
force-compile = []
# Enables saving shader byte code into file on compile.
save-blob = []
# Use spinlocks
spin-lock = ["dep:spin"]
# Use parking lot
parking-lot = ["dep:parking_lot"]

[dependencies.windows]
version = "0.36"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Controls_RichEdit",
    "Win32_Graphics_Direct3D11",
    "Win32_System_DataExchange",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Hlsl",
    "Win32_System_Memory",
    "Win32_Foundation"
]